# SkyFi-MCP-Server

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-eval.txt  requirements.txt
config/: README.md  credentials.json.example
docs/: SYSTEM_DESIGN.md  design-aoi-subscription-dedup.md  design-notification-routing-persistence.md  integrations.md  manual-test-coarse-dedup.md  manual-test-global-aois.md  observability.md  requirements-audit.md  skyfi-api-notifications-source.md  skyfi_execution_plan_final.md  skyfi_execution_plan_v3_1.md  skyfi_mcp_prd_v2_3.md  skyfi_prd_customer_framed.md  skyfi_prd_v3_2.md  verification-aoi-ui-sync.md  web-connect.md  webhook-setup.md
phase0/: validate_skyfi_api.py
samples/: archives_20260306_113554.json  archives_20260306_113846.json  archives_20260306_154817.json  archives_20260306_160956.json  archives_20260306_161023.json  archives_20260306_161140.json  notifications_20260306_161141.json  pass_prediction_20260306_113851.json  pass_prediction_20260306_154818.json  pass_prediction_20260306_161023.json  pricing_20260306_154817.json
scripts/: call_search_imagery.json  call_search_imagery.sh  download_recent_orders.py  llm_eval_runner.py  local_webhook_receiver.py  mock_skyfi_webhook.sh  mock_skyfi_webhook_payload.json  register_global_aois.py  session_start_monitoring_events.py  verify_mcp.py
src/: __init__.py  config.py  credentials_loader.py  request_context.py  server.py
tests/: __init__.py  conftest.py  eval_cases.py  (+25 more)
(+44 files in other folders)
