[project]
name = "skyfi-mcp-server"
version = "0.1.0"
description = "SkyFi Remote MCP Server"
requires-python = ">=3.10"
dependencies = []  # See requirements.txt for install

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "phase0", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # line length handled by formatter
[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]  # scripts add sys.path before importing src

[tool.ruff.format]
quote-style = "double"
